store data in resource pack loaded before all others